@@ -24,4 +24,4 @@
 # *  e-mail address 'scipion@cnb.csic.es'
 # *
 # **************************************************************************
-__version__ = '2.0'
+__version__ = '2.1'
