@@ -48,7 +48,6 @@ def defineArgs():
     parser.add_argument("--visiblelabels", help="List of column names that will be visible", type=str, default=None)
     parser.add_argument("--orderlabels", help="List of column names that will be used to stablished a columns order", type=str, default=None)
 
-
     return parser
 
 
@@ -78,7 +77,7 @@ def main():
 
     if args.orderlabels:
         logger.info("Order labels: %s" % args.orderlabels)
-        objectManager.setColumnsOrder(args.orderlabels.split(' '))
+        objectManager.setColumnsOrder('objects', args.orderlabels.split(' '))
 
     objectManager.open(args)
 
